tdf#119904 : Generalize the fix for tdf#115093

The point is, if one of the FormulaTokens in the formula
is returned as the "result" FormulaToken, then we should not reuse
that same FormulaToken for each formula-cell in the group. If we do,
then we end up with whole group/batch having the same result.

Also adds a unit test specific to this bug.

This issue is non existent in master because "SoftwareInterpreter"
and related code were removed from master long after branch-off
to 6.1.

Change-Id: I10265211b5f14c82ed385401aa3fb838c492872d